--- a/Game.css
+++ b/Game.css
@@ -61,11 +61,17 @@ h1{
 }
 
 @media only screen and (max-width:450px){
-    #pauseModal{
+    #staticBackdrop{
         width: 90vw;
         position: absolute;
         left: 50%;
-        transform: translateX(-54%);
+        transform: translateX(-50%);
+    }
+    #GameOver{
+        width: 90vw;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
     }
 
     .panel{
@@ -73,10 +79,29 @@ h1{
         
     }
     .card-body{
-        height: 300px;
+        height: 250px;
         
     }
     #comPanel{
         margin-bottom: 10px;
+    }
+    .modal-backdrop{
+        width: 99.96vw;
+    }
+    html{
+        width: 100%;
+        height: 100%;
+    }
+    .BG{
+        width: 100vw;
+    }
+    .mainImg{
+        transform: scale(0.8);
+    }
+    .userOpt{
+        margin-top: -15px;
+    }
+    #pause-btn{
+        margin-top: 10px;
     }
 }
